# LaserImageCopy-qml

./: .gitignore  CMakeLists.txt  LaserImageCopy.qmlproject  LaserImageCopy.qmlproject.qtds  LaserImageCopy.qrc  README.md  qds.cmake
App/: CMakeLists.txt  backend.cpp  backend.h  foldermodel.cpp  foldermodel.h  main.cpp  setting.ini
App/autogen/: environment.h
LaserImageCopy/: CMakeLists.txt  Constants.qml  qmldir
LaserImageCopy/designer/: plugin.metainfo
LaserImageCopyContent/: App.qml  CMakeLists.txt  PathListView.qml  PathSelector.qml  Screen01.ui.qml
